--- a/src/pages/components/my-navigator-tab/my-navigator-tab.less
+++ b/src/pages/components/my-navigator-tab/my-navigator-tab.less
@@ -37,6 +37,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
+  z-index: 30;
   background-color: #fff;
 }
 .f24 {
@@ -46,7 +47,7 @@
   color: #333;
 }
 .special {
-  height: 12%;
+  height: 9%;
   .tab-item {
     height: 100% !important;
   }
